<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btn_edit_user"
            android:layout_toLeftOf="@+id/btn_edit_user"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_user_email"
                android:layout_width="wrap_content"
                android:textColor="@color/ripple_color"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/diso_gmail_com" />

            <TextView
                android:id="@+id/txt_user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ripple_color"
                android:layout_marginTop="6dp"
                android:text="@string/_998901234567"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txt_user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ripple_color"
                android:layout_marginTop="6dp"
                android:text="@string/collins_street_west_victoria_8007_australia_envato_hq_121_king_street_melbourne_victoria_3000_australia" />


        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btn_edit_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/ripple_color"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit_profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </RelativeLayout>

    <include layout="@layout/include_row_separator" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_order_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_order_history"
                app:tint="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/txt_profile_history"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_other_rate"
                app:tint="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/txt_profile_rate"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_share_grey"
                app:tint="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/txt_profile_share"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_privacy"
                app:tint="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/txt_profile_privacy"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>