<?xml version="1.0" encoding="utf-8"?>
<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:mrl_rippleAlpha="0.2"
    app:mrl_rippleHover="true"
    android:background="@color/color_2"
    app:mrl_rippleOverlay="true">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:background="@color/black"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/transparent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/category_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:focusable="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_loading"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Rounded"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/constraintLayout"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:paddingEnd="10dp"
                    android:maxLines="2"
                    android:text="@string/menu_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/color_3"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/txt_state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/_15_usd"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_name" />

                <TextView
                    android:id="@+id/txt_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/b_u"
                    android:textColor="@color/color_3"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</com.balysv.materialripple.MaterialRippleLayout>